Fix student list alignment issue
- Fix student list header alignment in instructional materials

- Conflicts:
    public/stylesheets/scss/app.scss

--- a/public/stylesheets/scss/app.scss
+++ b/public/stylesheets/scss/app.scss
@@ -1446,5 +1446,9 @@ a.hlink:hover{color:#DA5936;text-decoration:none;cursor:pointer}
   font-style: italic;
   text-align: center;
 }
+}
+.message_text
+{
+  font-style: italic;
 
 #div_teacher_list td {width:auto !important;white-space:nowrap;}
